=== HEAD

* Deprecate global use of pagination, pretty_table, query, select_remove, schema_caching, and schema_dumper extensions (jeremyevans)

* Deprecate Dataset.introspect_all_columns in the columns_introspection extension (jeremyevans)

* Add empty_array_ignore_nulls extension for ignoring null handling for IN/NOT with an empty array (jeremyevans)

* Deprecate Sequel.empty_array_handle_nulls accessor (jeremyevans)

* Deprecate Sequel.{k,ts,tsk}_require and Sequel.check_requiring_thread (jeremyevans)

* Discontinue use of manual thread-safe requiring (jeremyevans)

* Deprecate using an unsupported client_min_messages setting on PostgreSQL (jeremyevans)

* Deprecate passing non-hash 4th argument to Dataset#join_table (jeremyevans)

* Deprecate passing non-hash 2nd argument to Dataset#union/intersect/except (jeremyevans)

* Deprecate one_to_many with :one_to_one option raising an error (jeremyevans)

* Automatically typecast hash and array to string for string columns in the looser_typecasting extension (jeremyevans)

* Deprecate automatic typecasting of hash and array to string for string columns (jeremyevans)

* Deprecate :eager_loader and :eager_grapher association options getting passed 3 separate arguments (jeremyevans)

* Deprecate validates_not_string (jeremyevans)

* Deprecate casting via __type suffix for prepared type placeholders in the postgres adapter (jeremyevans)

* Deprecate json_serializer's Model.json_create (jeremyevans)

* Deprecate json_serializer from_json and xml_serializer from_xml :all_columns and :all_associations options (jeremyevans)

* Deprecate passing an unsupported lock mode to Dataset#lock on PostgreSQL (jeremyevans)

* Deprecate Model::InstanceMethods.class_attr_{overridable,reader} (jeremyevans)

* Deprecate all methods in Dataset::PUBLIC_APPEND_METHODS except for literal, quote_identifier, quote_schema_table (jeremyevans)

* Deprecate all methods in Dataset::PRIVATE_APPEND_METHODS (jeremyevans)
