@@ -1,5 +1,7 @@
 === HEAD
 
+* Deprecate Postgres::PGRangeOp#{starts_before,ends_after} (jeremyevans)
+
 * Deprecate global use of pagination, pretty_table, query, select_remove, schema_caching, and schema_dumper extensions (jeremyevans)
 
 * Deprecate Dataset.introspect_all_columns in the columns_introspection extension (jeremyevans)
